Adicionado uma nova div contento links para minha redes. Site agora responsivo para tablets.

--- a/index.html
+++ b/index.html
@@ -36,6 +36,13 @@
             <div>
                 Já tem uma conta? <a href="">Faça o Login</a>
             </div>
+            <div class="personal_information">
+                <div class="social">
+                    <a href="https://github.com/Cesaz" target="_blank"><img src="images/icons8-github-36(-hdpi).png" alt=""></a>
+                    <a href="https://www.linkedin.com/in/cesaz/" target="_blank"><img src="images/icons8-linkedin-2-32.png" alt=""></a>
+                </div>
+                <span>Create by César Augusto</span>
+            </div>
         </div>
     </div>
 
